--- a/src/assets/user/scss/home-page.scss
+++ b/src/assets/user/scss/home-page.scss
@@ -60,3 +60,395 @@
         }
     }
 }
+
+.header__logo img {
+    width: 80%;
+    height: 100%;
+}
+
+.header__menu {
+    padding: 34px 0px;
+
+    ul {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        li {
+            list-style: none;
+            position: relative;
+
+            a {
+                font-size: 20px;
+                color: #000;
+                text-decoration: none;
+            }
+        }
+
+        li:hover .header__menu__dropdown {
+            opacity: 1;
+            visibility: visible;
+            transition: 0.3s all ease-in-out;
+        }
+
+        .active a {
+            color: map-get($map: $theme-colors, $key: "main");
+            transition: 0.3s all ease-in-out;
+        }
+
+        .header__menu__dropdown {
+            position: absolute;
+            background-color: #ede3ea;
+            display: block;
+            z-index: 999;
+            width: 200px;
+            opacity: 0;
+            visibility: hidden;
+            transition: 0.3s all ease-in-out;
+
+            li {
+                padding: 5px 0px;
+
+                &:hover {
+                    color: #fff;
+                    background-color: map-get($map: $theme-colors, $key: "main");
+                    transition: 0.3s all ease-in-out;
+
+                    a {
+                        color: #fff;
+                    }
+                }
+
+                a {
+                    text-transform: capitalize;
+                    color: #000;
+                    font-weight: 400;
+                    padding: 0px 15px;
+                }
+            }
+        }
+    }
+}
+
+.search__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    ul {
+        list-style: none;
+        display: flex;
+        flex: 0 0 auto;
+        column-gap: 10px;
+
+        li {
+            position: relative;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            font-size: 20px;
+
+            span {
+                position: absolute;
+                background-color: map-get($map: $theme-colors, $key: "main");
+                color: #fff;
+                border-radius: 50%;
+                width: 15px;
+                height: 15px;
+                display: inline-block;
+                text-align: center;
+                line-height: 15px;
+                font-size: 12px;
+                left: 12px;
+                top: -6px;
+            }
+        }
+
+        li:hover {
+            color: map-get($map: $theme-colors, $key: "main");
+            transition: 0.3s all ease-in-out;
+        }
+    }
+}
+
+/* Lớp nền mờ khi popup hiện */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease-in;
+}
+
+.overlay.active {
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.5);
+    visibility: visible;
+}
+
+.search-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.7);
+    width: 60%;
+    max-width: 600px;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    border-radius: 8px;
+    opacity: 0;
+    visibility: hidden;
+    transition:
+        transform 0.3s ease,
+        opacity 0.3s ease;
+}
+
+.search-popup.active {
+    opacity: 1;
+    visibility: visible;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.popup-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.popup-content input {
+    padding: 10px 0;
+    font-size: 16px;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    transition: 0.3s ease-in;
+}
+
+.popup-content input:focus {
+    outline: none;
+    border-bottom: 2px solid map-get($map: $theme-colors, $key: "main");
+}
+
+.popup-content button {
+    padding: 10px;
+    font-size: 16px;
+    background-color: #fff;
+    color: map-get($map: $theme-colors, $key: "main");
+    border: 1px solid map-get($map: $theme-colors, $key: "main");
+    cursor: pointer;
+    border-radius: 4px;
+    transition: 0.3s ease;
+}
+
+.popup-content button:hover {
+    border: 1px solid map-get($map: $theme-colors, $key: "main");
+    background-color: map-get($map: $theme-colors, $key: "main");
+    color: #fff;
+}
+
+.footer__container {
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+    height: 400px;
+}
+
+.overlay__footer {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6); /* Lớp overlay để làm tối ảnh nền */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+.footer__about {
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+.footer__description {
+    font-size: 16px;
+}
+
+.footer__time {
+    display: flex;
+    column-gap: 20px;
+    margin-top: 50px;
+
+    a {
+        background-color: map-get($map: $theme-colors, $key: "main");
+        padding: 10px 15px;
+
+        svg {
+            font-size: 30px;
+            color: white;
+        }
+    }
+}
+
+.footer__about__me {
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+.links__about__me {
+    ul {
+        li {
+            list-style: none;
+            padding-bottom: 20px;
+            transition: 0.5s ease-in-out;
+
+            &:hover {
+                transform: scale(1.01);
+
+                a {
+                    color: map-get($map: $theme-colors, $key: "main");
+                }
+            }
+
+            a {
+                text-decoration: none;
+                color: white;
+                font-size: 16px;
+            }
+        }
+    }
+}
+
+.footer__help {
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+.links__help {
+    ul {
+        li {
+            list-style: none;
+            padding-bottom: 20px;
+            transition: 0.5s ease-in-out;
+
+            &:hover {
+                transform: scale(1.01);
+
+                a {
+                    color: map-get($map: $theme-colors, $key: "main");
+                }
+            }
+
+            a {
+                text-decoration: none;
+                color: white;
+                font-size: 16px;
+            }
+        }
+    }
+}
+
+.footer__post {
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+.recent__post__item {
+    display: flex;
+    column-gap: 15px;
+    margin-bottom: 15px;
+
+    .recent__post__images {
+        flex: 0 0 auto;
+        width: 50px;
+        height: 50px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+
+.recent__post__title {
+    font-size: 16px;
+    font-weight: 600;
+    white-space: nowrap;        
+    overflow: hidden;           
+    text-overflow: ellipsis;    
+    width: 200px;
+    margin-bottom: 10px;
+}
+
+.recent__post__date {
+    opacity: 0.6;
+    font-weight: 200;
+}
+
+.footer__copyright {
+    background-color: map-get($map: $theme-colors, $key: "main");
+}
+
+.footer__copyright__text {
+    display: flex;
+    padding: 20px 0px;
+
+    ul {
+        display: flex;
+        align-items: center;
+        list-style: none;
+
+        li {
+            font-size: 20px;
+            display: flex;
+            align-items: center;
+            flex: 0 0 auto;
+            column-gap: 5px;
+            color: #fff;
+        }
+    }
+}
+
+.footer__copyright__icons {
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px 0px;
+
+    ul {
+        display: flex;
+        column-gap: 10px;
+        list-style: none;
+
+        a {
+            font-size: 20px;
+            width: 30px;
+            height: 30px;
+            background-color: #fff;
+            display: inline-block;
+            color: map-get($map: $theme-colors, $key: "main");
+            padding: 5px 5px;
+            border-radius: 50%;
+        }
+
+        a:hover {
+            color: #fff;
+            background-color: map-get($map: $theme-colors, $key: "main");
+            transition: 0.3s all ease-in-out;
+        }
+    }
+}
