--- a/src/styles/pages/_all.scss
+++ b/src/styles/pages/_all.scss
@@ -42,9 +42,14 @@ body {
         max-width: 50%;
     }
 
-    .col-xl-3 {
-        flex: 0 0 25%;
-        max-width: 25%;
+    .col-xl-9 {
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
+
+    .col-xl-12 {
+        flex: 0 0 100%;
+        max-width: 100%;
     }
 }
 
@@ -52,7 +57,6 @@ body {
     .col-lg-3 {
         flex: 0 0 25%;
         max-width: 25%;
-        background-color: blue;
     }
 }
 
@@ -60,6 +64,5 @@ body {
     .col-lg-3 {
         flex: 0 0 100%;
         max-width: 100%;
-        background-color: red;
     }
 }
