--- a/src/assets/user/scss/home-page.scss
+++ b/src/assets/user/scss/home-page.scss
@@ -158,14 +158,14 @@
                 background-color: map-get($map: $theme-colors, $key: "main");
                 color: #fff;
                 border-radius: 50%;
-                width: 15px;
-                height: 15px;
+                width: 20px;
+                height: 20px;
                 display: inline-block;
                 text-align: center;
-                line-height: 15px;
+                line-height: 20px;
                 font-size: 12px;
-                left: 12px;
-                top: -6px;
+                left: 14px;
+                top: -8px;
             }
         }
 
@@ -331,6 +331,92 @@
     }
 }
 
+.categories__container {
+    max-width: 1200px !important;
+    h4, h2{
+        text-align: center;
+    }
+
+    h4 {
+        font-style: italic;
+    }
+    
+    h2 {
+        font-weight: 600;
+        margin-bottom: 10px;
+
+        strong {
+            color: map-get($map: $theme-colors, $key: "main");
+        }
+    }
+
+    .categories__list {
+        .categories__item {
+            height: 250px;
+            border-radius: 8px;
+            position: relative;
+            overflow: hidden;
+            background-position: top center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            transition: transform 0.3s ease-in-out;
+
+            &:last-child:first-child {
+                margin-right: 5px;
+                margin-left: 5px;
+            }
+
+            img {
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
+
+            p {
+                position: absolute;
+                bottom: 20px;
+                left: 0;
+                width: 100%;
+                color: white;
+                text-align: center;
+                padding: 10px;
+                font-size: 16px;
+                text-transform: uppercase;
+                font-weight: 600;
+                opacity: 0;
+                transition: opacity 0.3s ease-in-out;
+                z-index: 2; 
+            }
+
+            &:before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(to bottom, rgba(255, 255, 255, 0.6), rgba(0, 0, 0, 0.6));
+                opacity: 0;
+                transition: opacity 0.3s ease-in-out;
+                z-index: 1;
+                border-radius: 8px;
+            }
+
+            &:hover:before {
+                opacity: 1;
+            }
+
+            &:hover {
+                transform: scale(1.05);
+            }
+
+            &:hover p {
+                opacity: 1;
+            }
+        }
+    }
+}
+
 .new__product__image {
     margin: 50px 0;
 }
@@ -343,7 +429,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        border-radius: 10px;
+        border-radius: 8px;
     }
 }
 
@@ -357,7 +443,7 @@
         width: 98%;
         height: 100%;
         object-fit: cover;
-        border-radius: 10px;
+        border-radius: 8px;
     }
 
     .new__product__image-bottom-left {
@@ -387,6 +473,389 @@
     100% {
         color: blue;
     }
+}
+
+.choose__food {
+    margin: 80px 0;
+
+    .choose__food__image {
+        position: relative;
+        height: 550px;
+        width: 92%;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .choose__food__content {
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
+            background-color: white;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            max-width: calc(100% - 40px); /* giữ nội dung nằm trong ảnh */
+            color: map-get($map: $theme-colors, $key: "main");
+            background-color: #fff;
+
+            p {
+                margin-bottom: 10px;
+            }
+
+            h4 {
+                font-style: italic;
+            }
+        }
+    }
+
+    .right__choose__food__box {
+        h4 {
+            font-style: italic;
+            margin-bottom: 10px;
+        }
+
+        h2 {
+            font-weight: 600;
+            margin-bottom: 20px;
+        }
+
+        .outside__text {
+            margin-bottom: 20px;
+        }
+
+        .resson__choose {
+            .resson__choose__content {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                column-gap: 10px;
+                margin-bottom: 20px;
+
+                .resson__choose__icon {
+                    background-color: map-get($map: $theme-colors, $key: "main");
+                    color: #fff;
+                    padding: 30px 30px;
+
+                    svg {
+                        font-size: 30px;
+                    }
+                }
+            }
+
+            .resson__choose__text {
+                h2 {
+                    font-weight: 600;
+                    margin-bottom: 10px;
+                }
+
+                p {
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 2;
+                    line-clamp: 2;
+                    -webkit-line-clamp: var(--webkit-line-clamp);
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
+            }
+        }
+    }
+}
+
+.menu__container {
+    .our__menu {
+        text-align: center;
+        font-style: italic;
+
+        strong {
+            color: map-get($map: $theme-colors, $key: "main");
+        }
+    }
+
+    .description {
+        text-align: center;
+        margin-bottom: 20px;
+        font-weight: 600;
+    }
+}
+
+.menu__list {
+    .tab__content {
+        .menu__item__main {
+            width: 350px;
+            height: 350px;
+            padding: 0px 30px;
+    
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    
+        .menu__item {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            column-gap: 20px;
+            margin-bottom: 30px;
+            margin-right: 20px;
+    
+            .menu__item__image {
+                height: 110px;
+                width: 140px;
+    
+                img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 8px;
+                }
+            }
+
+            .menu__item__content {
+                h3 {
+                    font-size: 20px;
+                    margin-bottom: 10px;
+                    transition: 0.5s all ease-in-out;
+
+                    &:hover {
+                        color: map-get($map: $theme-colors, $key: "main");
+                    }
+                }
+
+                p {
+                    white-space: nowrap;        
+                    overflow: hidden;           
+                    text-overflow: ellipsis;    
+                    width: 200px;
+                }
+
+                h4 {
+                    font-style: italic;
+                    color: #ff0000;
+                }
+            }
+        }
+    }
+
+    .ant-card {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .ant-card-bordered {
+        border: none;
+    }
+
+    .ant-tabs .ant-tabs-ink-bar {
+        background-color: map-get($map: $theme-colors, $key: "main") !important;
+    }
+
+    .ant-tabs .ant-tabs-tab {
+        font-size: 16px;
+        font-weight: 600;
+    }
+
+    .ant-tabs .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
+        color: map-get($map: $theme-colors, $key: "main") !important;
+        font-size: 16px;
+        font-weight: 600;
+    }
+
+    .ant-tabs .ant-tabs-tab:hover {
+        color: map-get($map: $theme-colors, $key: "main") !important;
+    }
+}
+
+.sub__banner {
+    position: relative;
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+    color: white;
+    height: 300px;
+    margin: 50px 0;
+    margin-bottom: 200px;
+}
+
+.overlay__sub__banner {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6); /* Lớp overlay để làm tối ảnh nền */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+.sub__banner__flexbox {
+    max-width: 1200px;
+
+    .sub__banner__list {
+        margin-top: 250px;
+        position: relative;
+        z-index: 3;
+
+        .sub__banner__item {
+            height: 300px;
+            position: relative;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+
+            &:last-child:first-child {
+                margin-right: 5px;
+                margin-left: 5px;
+            }
+
+            .infomation__chef {
+                height: 300px;
+                border-radius: 8px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+
+                .infomation__chef__name {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    background-color: map-get($map: $theme-colors, $key: "main");
+                    text-align: center;
+                    padding: 10px 0;
+                    font-size: 16px;
+
+                    h3 {
+                        color: #fff;
+                    }
+
+                    p {
+                        color: #fff;
+                        font-style: italic;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.feedback__box {
+    background-color: #000;
+    height: 500px;
+    margin-bottom: 50px;
+
+    .feedback__content {
+        height: 500px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        padding: 0 30px;
+        
+        h2 {
+            color: #fff;
+            font-size: 32px;
+
+            strong {
+                font-size: 48px;
+                font-style: italic;
+                color: map-get($map: $theme-colors, $key: "main");
+            }
+        }
+
+        .feedback__icon {
+            svg {
+                color: map-get($map: $theme-colors, $key: "main");
+                font-size: 50px;
+                margin-bottom: 40px;
+            }
+        }
+
+        .feedback__description {
+            color: #fff;
+            margin-bottom: 20px;
+            font-style: italic;
+            font-size: 16px;
+        }
+
+        .feedback__person {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            column-gap: 20px;
+
+            .feedback__person__image {
+                width: 80px;
+                height: 80px;
+                border-radius: 50%;
+                overflow: hidden;
+
+                img {
+                    width: 100%;
+                    height: 100%;                
+                }
+            }
+
+            .feedback__person__info {
+                .rating {
+                    .ant-rate {
+                        height: 25px;
+                    }
+
+                    .ant-rate-star {
+                        span {
+                            svg {
+                                font-size: 16px !important;
+                            }
+                        }
+                    }
+
+                    .ant-rate-star-zero {
+                        span {
+                            svg {
+                                color: #fff !important;
+                            }
+                        }
+                    }
+                }
+
+                h4 {
+                    color: #fff;
+                    font-size: 16px;
+                }
+
+                p {
+                    color: #fff;
+                    font-style: italic;
+                }
+            }
+        }
+    }
+
+    .feedback__image {
+        height: 500px;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+}
+
+.slick-arrow {
+    opacity: 1 !important;
 }
 
 .footer__container {
@@ -538,11 +1007,11 @@
 
 .footer__copyright {
     background-color: map-get($map: $theme-colors, $key: "main");
+    height: 50px;
 }
 
 .footer__copyright__text {
     display: flex;
-    padding: 20px 0px;
 
     ul {
         display: flex;
@@ -563,7 +1032,7 @@
 .footer__copyright__icons {
     display: flex;
     justify-content: flex-end;
-    padding: 20px 0px;
+    padding: 10px 0px;
 
     ul {
         display: flex;
