--- a/src/styles/pages/_all.scss
+++ b/src/styles/pages/_all.scss
@@ -37,9 +37,19 @@ body {
         max-width: 25%;
     }
 
+    .col-xl-4 {
+        flex: 0 0 33.33%;
+        max-width: 33.33%;
+    }
+
     .col-xl-6 {
         flex: 0 0 50%;
         max-width: 50%;
+    }
+
+    .col-xl-8 {
+        flex: 0 0 66.66%;
+        max-width: 66.66%;
     }
 
     .col-xl-9 {
