--- a/src/assets/user/scss/home-page.scss
+++ b/src/assets/user/scss/home-page.scss
@@ -51,12 +51,12 @@
         a {
             font-size: 16px;
             display: inline-block;
-            color: #000;
+            color: map-get($map: $theme-colors, $key: "black");
         }
 
         a:hover {
             color: map-get($map: $theme-colors, $key: "main");
-            transition: 0.3s all ease-in-out;
+            transition: map-get($map: $theme-transitions, $key: "other");
         }
     }
 }
@@ -85,7 +85,7 @@
 
             a {
                 font-size: 20px;
-                color: #000;
+                color: map-get($map: $theme-colors, $key: "black");
                 text-decoration: none;
             }
         }
@@ -93,12 +93,12 @@
         li:hover .header__menu__dropdown {
             opacity: 1;
             visibility: visible;
-            transition: 0.3s all ease-in-out;
+            transition: map-get($map: $theme-transitions, $key: "other");
         }
 
         .active a {
             color: map-get($map: $theme-colors, $key: "main");
-            transition: 0.3s all ease-in-out;
+            transition: map-get($map: $theme-transitions, $key: "other");
         }
 
         .header__menu__dropdown {
@@ -109,24 +109,24 @@
             width: 200px;
             opacity: 0;
             visibility: hidden;
-            transition: 0.3s all ease-in-out;
+            transition: map-get($map: $theme-transitions, $key: "other");
 
             li {
                 padding: 5px 0px;
 
                 &:hover {
-                    color: #fff;
+                    color: map-get($map: $theme-colors, $key: "white");
                     background-color: map-get($map: $theme-colors, $key: "main");
-                    transition: 0.3s all ease-in-out;
+                    transition: map-get($map: $theme-transitions, $key: "other");
 
                     a {
-                        color: #fff;
+                        color: map-get($map: $theme-colors, $key: "white");
                     }
                 }
 
                 a {
                     text-transform: capitalize;
-                    color: #000;
+                    color: map-get($map: $theme-colors, $key: "black");
                     font-weight: 400;
                     padding: 0px 15px;
                 }
@@ -156,7 +156,7 @@
             span {
                 position: absolute;
                 background-color: map-get($map: $theme-colors, $key: "main");
-                color: #fff;
+                color: map-get($map: $theme-colors, $key: "white");
                 border-radius: 50%;
                 width: 20px;
                 height: 20px;
@@ -171,7 +171,7 @@
 
         li:hover {
             color: map-get($map: $theme-colors, $key: "main");
-            transition: 0.3s all ease-in-out;
+            transition: map-get($map: $theme-transitions, $key: "other");
         }
     }
 }
@@ -203,7 +203,7 @@
     transform: translate(-50%, -50%) scale(0.7);
     width: 60%;
     max-width: 600px;
-    background-color: white;
+    background-color: map-get($map: $theme-colors, $key: "white");
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 1000;
@@ -255,7 +255,7 @@
 .popup-content button:hover {
     border: 1px solid map-get($map: $theme-colors, $key: "main");
     background-color: map-get($map: $theme-colors, $key: "main");
-    color: #fff;
+    color: map-get($map: $theme-colors, $key: "white");
 }
 
 .carousel {
@@ -316,11 +316,11 @@
         button {
             background-color: map-get($map: $theme-colors, $key: "main");
             border: 1px solid map-get($map: $theme-colors, $key: "main");
-            color: #fff;
+            color: map-get($map: $theme-colors, $key: "white");
             padding: 10px 30px;
             border-radius: 20px;
             font-size: 16px;
-            transition: 0.5s all ease-in-out;
+            transition: map-get($map: $theme-transitions, $key: "main");
 
             &:hover {
                 background-color: #fff;
@@ -359,7 +359,7 @@
             background-position: top center;
             background-size: cover;
             background-repeat: no-repeat;
-            transition: transform 0.3s ease-in-out;
+            transition: map-get($map: $theme-transitions, $key: "other");
 
             &:last-child:first-child {
                 margin-right: 5px;
@@ -377,7 +377,7 @@
                 bottom: 20px;
                 left: 0;
                 width: 100%;
-                color: white;
+                color: map-get($map: $theme-colors, $key: "white");
                 text-align: center;
                 padding: 10px;
                 font-size: 16px;
@@ -493,13 +493,12 @@
             position: absolute;
             bottom: 20px;
             left: 20px;
-            background-color: white;
+            background-color: map-get($map: $theme-colors, $key: "white");
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             max-width: calc(100% - 40px); /* giữ nội dung nằm trong ảnh */
             color: map-get($map: $theme-colors, $key: "main");
-            background-color: #fff;
 
             p {
                 margin-bottom: 10px;
@@ -536,7 +535,7 @@
 
                 .resson__choose__icon {
                     background-color: map-get($map: $theme-colors, $key: "main");
-                    color: #fff;
+                    color: map-get($map: $theme-colors, $key: "white");
                     padding: 30px 30px;
 
                     svg {
@@ -595,7 +594,7 @@
             }
         }
     
-        .menu__item {
+        .menu__item a {
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -616,9 +615,10 @@
 
             .menu__item__content {
                 h3 {
+                    color: map-get($map: $theme-colors, $key: "black");
                     font-size: 20px;
                     margin-bottom: 10px;
-                    transition: 0.5s all ease-in-out;
+                    transition: map-get($map: $theme-transitions, $key: "other");
 
                     &:hover {
                         color: map-get($map: $theme-colors, $key: "main");
@@ -626,6 +626,7 @@
                 }
 
                 p {
+                    color: map-get($map: $theme-colors, $key: "black");
                     white-space: nowrap;        
                     overflow: hidden;           
                     text-overflow: ellipsis;    
@@ -676,7 +677,7 @@
     background-size: cover;
     background-position: top center;
     background-repeat: no-repeat;
-    color: white;
+    color: map-get($map: $theme-colors, $key: "white");
     height: 300px;
     margin: 50px 0;
     margin-bottom: 200px;
@@ -736,11 +737,11 @@
                     font-size: 16px;
 
                     h3 {
-                        color: #fff;
+                        color: map-get($map: $theme-colors, $key: "white");
                     }
 
                     p {
-                        color: #fff;
+                        color: map-get($map: $theme-colors, $key: "white");
                         font-style: italic;
                     }
                 }
@@ -750,7 +751,7 @@
 }
 
 .feedback__box {
-    background-color: #000;
+    background-color: map-get($map: $theme-colors, $key: "black");
     height: 500px;
     margin-bottom: 50px;
 
@@ -764,7 +765,7 @@
         padding: 0 30px;
         
         h2 {
-            color: #fff;
+            color: map-get($map: $theme-colors, $key: "white");
             font-size: 32px;
 
             strong {
@@ -783,7 +784,7 @@
         }
 
         .feedback__description {
-            color: #fff;
+            color: map-get($map: $theme-colors, $key: "white");
             margin-bottom: 20px;
             font-style: italic;
             font-size: 16px;
@@ -824,19 +825,19 @@
                     .ant-rate-star-zero {
                         span {
                             svg {
-                                color: #fff !important;
+                                color: map-get($map: $theme-colors, $key: "white") !important;
                             }
                         }
                     }
                 }
 
                 h4 {
-                    color: #fff;
+                    color: map-get($map: $theme-colors, $key: "white");
                     font-size: 16px;
                 }
 
                 p {
-                    color: #fff;
+                    color: map-get($map: $theme-colors, $key: "white");
                     font-style: italic;
                 }
             }
@@ -938,7 +939,7 @@
             .new__info {
                 a {
                     text-decoration: none;
-                    color: #000;
+                    color: map-get($map: $theme-colors, $key: "black");
     
                     h2 {
                         font-weight: 600;
@@ -953,7 +954,7 @@
         
                         &:hover {
                             color: map-get($map: $theme-colors, $key: "main");
-                            transition: all 0.5s ease-in-out;
+                            transition: map-get($map: $theme-transitions, $key: "main");
                         }
                     }
     
@@ -977,7 +978,7 @@
                                 column-gap: 10px;
                                 border: 1px solid map-get($map: $theme-colors, $key: "main") !important;
                                 color: map-get($map: $theme-colors, $key: "main") !important;
-                                background-color: #fff !important;
+                                background-color: map-get($map: $theme-colors, $key: "white") !important;
                                 padding: 10px 20px !important;
                                 font-size: 16px;
                                 border-radius: 8px;
@@ -985,8 +986,8 @@
     
                                 &:hover {
                                     background-color: map-get($map: $theme-colors, $key: "main") !important;
-                                    color: #fff !important;
-                                    transition: all 0.5s ease-in-out;
+                                    color: map-get($map: $theme-colors, $key: "white") !important;
+                                    transition: map-get($map: $theme-transitions, $key: "main");
                                 }
                             }
                         }
@@ -1002,7 +1003,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    color: white;
+    color: map-get($map: $theme-colors, $key: "white");
     height: 400px;
 }
 
@@ -1040,7 +1041,7 @@
 
         svg {
             font-size: 30px;
-            color: white;
+            color: map-get($map: $theme-colors, $key: "white");
         }
     }
 }
@@ -1056,7 +1057,7 @@
         li {
             list-style: none;
             padding-bottom: 20px;
-            transition: 0.5s ease-in-out;
+            transition: map-get($map: $theme-transitions, $key: "main");
 
             &:hover {
                 transform: scale(1.01);
@@ -1068,7 +1069,7 @@
 
             a {
                 text-decoration: none;
-                color: white;
+                color: map-get($map: $theme-colors, $key: "white");
                 font-size: 16px;
             }
         }
@@ -1086,7 +1087,7 @@
         li {
             list-style: none;
             padding-bottom: 20px;
-            transition: 0.5s ease-in-out;
+            transition: map-get($map: $theme-transitions, $key: "main");
 
             &:hover {
                 transform: scale(1.01);
@@ -1098,7 +1099,7 @@
 
             a {
                 text-decoration: none;
-                color: white;
+                color: map-get($map: $theme-colors, $key: "white");
                 font-size: 16px;
             }
         }
@@ -1163,7 +1164,7 @@
             align-items: center;
             flex: 0 0 auto;
             column-gap: 5px;
-            color: #fff;
+            color: map-get($map: $theme-colors, $key: "white");
         }
     }
 }
@@ -1182,7 +1183,7 @@
             font-size: 20px;
             width: 30px;
             height: 30px;
-            background-color: #fff;
+            background-color: map-get($map: $theme-colors, $key: "white");
             display: inline-block;
             color: map-get($map: $theme-colors, $key: "main");
             padding: 5px 5px;
@@ -1190,9 +1191,9 @@
         }
 
         a:hover {
-            color: #fff;
+            color: map-get($map: $theme-colors, $key: "white");
             background-color: map-get($map: $theme-colors, $key: "main");
-            transition: 0.3s all ease-in-out;
+            transition: map-get($map: $theme-transitions, $key: "other");
         }
     }
 }
