--- a/src/styles/pages/_theme.scss
+++ b/src/styles/pages/_theme.scss
@@ -2,9 +2,25 @@ $theme-colors: (
     "main": #BC9A6C,
     "white": #fff,
     "black": #000,
+    "description": #676767,
 );
 
 $theme-transitions: (
     "main": 0.5s all ease-in-out,
     "other": 0.3s all ease-in-out,
+);
+
+$theme-webkits: (
+    "title": (
+        display: -webkit-box,
+        -webkit-box-orient: vertical,
+        -webkit-line-clamp: 2,
+        overflow: hidden,
+    ),
+    "description": (
+        display: -webkit-box,
+        -webkit-box-orient: vertical,
+        -webkit-line-clamp: 3,
+        overflow: hidden,
+    ),
 );
