--- a/src/assets/user/scss/category-page.scss
+++ b/src/assets/user/scss/category-page.scss
@@ -122,6 +122,7 @@
                             color: map-get($map: $theme-colors, $key: "main");
                             transition: map-get($map: $theme-transitions, $key: "other");
                         }
+                        font-weight: 600;
                     }
         
                     p {
@@ -248,6 +249,7 @@
                     #{$key}: #{$value};
                 }
                 text-align: center;
+                font-weight: 600;
 
                 &:hover {
                     color: map-get($map: $theme-colors, $key: "main");
@@ -327,6 +329,8 @@
         
         h2 {
             margin: 10px 0;
+            font-weight: 600;
+            font-size: 20px;
         }
 
         .category__sidebar__list__item {
@@ -396,6 +400,8 @@
 
     h2 {
         margin-bottom: 10px;
+        font-size: 20px;
+        font-weight: 600;
     }
 
     form {
@@ -426,6 +432,8 @@
 
     h2 {
         margin: 10px 0;
+        font-size: 20px;
+        font-weight: 600;
     }
 
     .category__sidebar__lastest-product__item a {
