--- a/src/styles/pages/_theme.scss
+++ b/src/styles/pages/_theme.scss
@@ -3,6 +3,7 @@ $theme-colors: (
     "white": #fff,
     "black": #000,
     "description": #676767,
+    "border": #cccccc,
 );
 
 $theme-transitions: (
