--- a/src/assets/user/scss/home-page.scss
+++ b/src/assets/user/scss/home-page.scss
@@ -145,7 +145,6 @@
     }
 }
 
-
 .search__container {
     display: flex;
     justify-content: center;
@@ -195,7 +194,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 9998;
+    z-index: 9990;
     opacity: 0;
     transition: opacity 0.3s ease-in;
 }
@@ -267,6 +266,280 @@
     color: map-get($map: $theme-colors, $key: "white");
 }
 
+.login__container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.7) !important;
+    max-width: 850px;
+    width: 100%;
+    height: 600px;
+    background-color: map-get($map: $theme-colors, $key: "white");
+    z-index: 9995;
+}
+
+.login__container .cover {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    height: 100%;
+    width: 50%;
+    z-index: 9996;
+    transition: all 1s ease;
+    transform-origin: left;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
+}
+
+.login__container #flip:checked ~ .cover {
+    transform: rotateY(-180deg);
+}
+
+.login__container #flip:checked ~ .forms .login-form {
+    pointer-events: none;
+}
+
+.login__container .cover .front,
+.login__container .cover .back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.cover .back {
+    transform: rotateY(180deg);
+}
+
+.login__container .cover img {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    z-index: 9999;
+}
+
+.login__container .cover .text {
+    position: absolute;
+    z-index: 9999;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.login__container .cover .text::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0.5;
+    background: map-get($map: $theme-colors, $key: "main");
+}
+
+.cover .text .text-1,
+.cover .text .text-2 {
+    z-index: 20;
+    font-size: 26px;
+    font-weight: 600;
+    color: map-get($map: $theme-colors, $key: "white");
+    text-align: center;
+}
+
+.cover .text .text-2 {
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.login__container .forms {
+    height: 100%;
+    width: 100%;
+    background-color: map-get($map: $theme-colors, $key: "white");
+}
+
+.login__container .form-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.form-content .login-form,
+.form-content .signup-form {
+    width: calc(100% / 2 - 25px);
+    padding: 15px 0;
+}
+
+.forms .form-content .title {
+    position: relative;
+    font-size: 32px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 600;
+    color: #333;
+}
+
+.forms .form-content .title::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -4px;
+    height: 3px;
+    width: 40px;
+    background: map-get($map: $theme-colors, $key: "main");
+}
+
+.forms .form-content .input-boxes {
+    margin-top: 30px;
+}
+
+.forms .form-content .input-box {
+    display: flex;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    margin: 15px 0;
+    position: relative;
+}
+
+.form-content .input-box input {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    padding: 0 30px;
+    font-size: 16px;
+    font-weight: 500;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+}
+
+.form-content .input-box input:focus {
+    border-color: map-get($map: $theme-colors, $key: "main");
+}
+
+.form-content .input-box svg {
+    position: absolute;
+    color: map-get($map: $theme-colors, $key: "main");
+    font-size: 17px;
+}
+
+.forms .form-content .text {
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #333;
+}
+
+.forms .form-content .text a {
+    text-decoration: none;
+}
+
+.forms .form-content .text a:hover {
+    text-decoration: underline;
+}
+
+.forms .form-content .button {
+    color: map-get($map: $theme-colors, $key: "white");
+    margin-top: 40px;
+}
+
+.forms .form-content .button input {
+    color: map-get($map: $theme-colors, $key: "white");
+    background: map-get($map: $theme-colors, $key: "main");
+    border-radius: 8px;
+    padding: 0;
+    cursor: pointer;
+    transition: map-get($map: $theme-transitions, $key: "other");
+}
+
+.forms .form-content .button input:hover {
+    background: #7a7a7a;
+}
+
+.forms .form-content label {
+    color: #5b13b9;
+    cursor: pointer;
+}
+
+.forms .form-content label:hover {
+    text-decoration: underline;
+}
+
+.forms .form-content .login-text,
+.forms .form-content .sign-up-text {
+    text-align: center;
+    margin-top: 25px;
+}
+
+.login__container #flip {
+    display: none;
+}
+
+.social-text {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 16px;
+}
+
+.social-media {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.social-icon {
+    height: 45px;
+    width: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #444;
+    border: 1px solid #444;
+    border-radius: 50px;
+    margin: 0 5px;
+
+    svg {
+        font-size: 20px;
+    }
+}
+
+a {
+    text-decoration: none;
+}
+
+.social-icon:hover {
+    color: map-get($map: $theme-colors, $key: "main");
+    border-color: map-get($map: $theme-colors, $key: "main");
+    transition: map-get($map: $theme-transitions, $key: "other");
+}
+
+@media (max-width: 730px) {
+    .container .cover {
+        display: none;
+    }
+
+    .form-content .login-form,
+    .form-content .signup-form {
+        width: 100%;
+    }
+
+    .form-content .signup-form {
+        display: none;
+    }
+
+    .container #flip:checked ~ .forms .signup-form {
+        display: block;
+    }
+
+    .container #flip:checked ~ .forms .login-form {
+        display: none;
+    }
+}
+
 .carousel {
     width: 100%;
     height: 600px;
@@ -290,7 +563,7 @@
         font-size: 16px;
         font-weight: 600;
         font-style: italic;
-        
+
         strong {
             font-size: 24px;
             animation: changeColor 2s steps(1) infinite;
@@ -299,6 +572,7 @@
 
     .new__product__description {
         margin: 20px 0;
+        font-size: 20px;
 
         strong {
             color: map-get($map: $theme-colors, $key: "main");
@@ -342,14 +616,15 @@
 
 .categories__container {
     max-width: 1200px !important;
-    h4, h2{
+    h4,
+    h2 {
         text-align: center;
     }
 
     h4 {
         font-style: italic;
     }
-    
+
     h2 {
         font-weight: 600;
         margin-bottom: 10px;
@@ -398,7 +673,7 @@
             }
 
             &:before {
-                content: '';
+                content: "";
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -586,13 +861,13 @@
             width: 350px;
             height: 350px;
             padding: 0px 30px;
-    
+
             img {
                 width: 100%;
                 height: 100%;
             }
         }
-    
+
         .menu__item a {
             display: flex;
             justify-content: center;
@@ -600,11 +875,11 @@
             column-gap: 20px;
             margin-bottom: 30px;
             margin-right: 20px;
-    
+
             .menu__item__image {
                 height: 110px;
                 width: 140px;
-    
+
                 img {
                     width: 100%;
                     height: 100%;
@@ -762,7 +1037,7 @@
         flex-direction: column;
         text-align: center;
         padding: 0 30px;
-        
+
         h2 {
             color: map-get($map: $theme-colors, $key: "white");
             font-size: 32px;
@@ -803,7 +1078,7 @@
 
                 img {
                     width: 100%;
-                    height: 100%;                
+                    height: 100%;
                 }
             }
 
@@ -851,7 +1126,6 @@
             height: 100%;
         }
     }
-
 }
 
 .slick-arrow {
@@ -881,16 +1155,16 @@
 
     .new__item {
         height: 468px;
-    
+
         .news__image {
             height: 250px;
-    
+
             img {
                 width: 100%;
                 height: 100%;
             }
         }
-    
+
         .new__content {
             .new__author {
                 display: flex;
@@ -898,60 +1172,60 @@
                 align-items: center;
                 column-gap: 30px;
                 margin: 10px 0;
-    
+
                 .date {
                     display: flex;
                     justify-content: flex-start;
                     align-items: center;
                     column-gap: 5px;
-    
+
                     svg {
                         color: map-get($map: $theme-colors, $key: "main");
                         font-size: 16px;
                     }
-    
+
                     p {
                         color: map-get($map: $theme-colors, $key: "description");
                         font-style: italic;
                     }
                 }
-    
+
                 .author {
                     display: flex;
                     justify-content: flex-start;
                     align-items: center;
                     column-gap: 5px;
-    
+
                     svg {
                         color: map-get($map: $theme-colors, $key: "main");
                         font-size: 16px;
                     }
-    
+
                     p {
                         color: map-get($map: $theme-colors, $key: "description");
                         font-style: italic;
                     }
                 }
             }
-    
+
             .new__info {
                 a {
                     text-decoration: none;
                     color: map-get($map: $theme-colors, $key: "black");
-    
+
                     h2 {
                         font-weight: 600;
                         margin-bottom: 10px;
                         @each $key, $value in map-get($theme-webkits, title) {
                             #{$key}: #{$value};
                         }
-        
+
                         &:hover {
                             color: map-get($map: $theme-colors, $key: "main");
                             transition: map-get($map: $theme-transitions, $key: "main");
                         }
                     }
-    
+
                     p {
                         margin-bottom: 20px;
                         color: map-get($map: $theme-colors, $key: "description");
@@ -959,7 +1233,7 @@
                             #{$key}: #{$value};
                         }
                     }
-    
+
                     .new__button {
                         button {
                             display: flex;
@@ -1013,14 +1287,11 @@
     text-transform: uppercase;
     font-size: 20px;
     margin-bottom: 30px;
-
+    font-weight: 600;
 }
 
 .footer__description {
     width: 260px;
-}
-
-.footer__description {
     font-size: 16px;
 }
 
@@ -1032,6 +1303,10 @@
     a {
         background-color: map-get($map: $theme-colors, $key: "main");
         padding: 10px 15px;
+        height: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         svg {
             font-size: 30px;
@@ -1044,6 +1319,7 @@
     text-transform: uppercase;
     font-size: 20px;
     margin-bottom: 30px;
+    font-weight: 600;
 }
 
 .links__about__me {
@@ -1074,6 +1350,7 @@
     text-transform: uppercase;
     font-size: 20px;
     margin-bottom: 30px;
+    font-weight: 600;
 }
 
 .links__help {
@@ -1104,6 +1381,7 @@
     text-transform: uppercase;
     font-size: 20px;
     margin-bottom: 30px;
+    font-weight: 600;
 }
 
 .recent__post__item {
@@ -1127,9 +1405,9 @@
 .recent__post__title {
     font-size: 16px;
     font-weight: 600;
-    white-space: nowrap;        
-    overflow: hidden;           
-    text-overflow: ellipsis;    
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     width: 200px;
     margin-bottom: 10px;
 }
