--- a/src/styles/pages/_all.scss
+++ b/src/styles/pages/_all.scss
@@ -9,7 +9,7 @@ body {
 
 * {
     box-sizing: border-box;
-    font-family: 'Inter';
+    font-family: 'Roboto';
     margin: 0;
     padding: 0;
 }
