--- a/src/styles/pages/_theme.scss
+++ b/src/styles/pages/_theme.scss
@@ -24,4 +24,10 @@ $theme-webkits: (
         -webkit-line-clamp: 3,
         overflow: hidden,
     ),
+    "sub-title": (
+        display: -webkit-box,
+        -webkit-box-orient: vertical,
+        -webkit-line-clamp: 1,
+        overflow: hidden,
+    ),
 );
