--- a/src/assets/user/scss/category-page.scss
+++ b/src/assets/user/scss/category-page.scss
@@ -122,11 +122,13 @@
                             color: map-get($map: $theme-colors, $key: "main");
                             transition: map-get($map: $theme-transitions, $key: "other");
                         }
+                        font-size: 18px;
                         font-weight: 600;
                     }
         
                     p {
                         margin: 8px 0;
+                        font-size: 16px;
                         color: map-get($map: $theme-colors, $key: "description");
                         @each $key, $value in map-get($theme-webkits, description) {
                             #{$key}: #{$value};
@@ -136,7 +138,7 @@
             }
 
             .product__item__rating-and-price {
-                margin-top: 20px;
+                margin-top: 10px;
         
                 .product__item__price {
                     p {
@@ -167,6 +169,7 @@
                         margin-left: 5px;
                         color: map-get($map: $theme-colors, $key: "description");
                         font-style: italic;
+                        font-size: 12px;
                     }
 
                     .ant-rate-star {
@@ -248,6 +251,7 @@
                 @each $key, $value in map-get($theme-webkits, title) {
                     #{$key}: #{$value};
                 }
+                font-size: 18px;
                 text-align: center;
                 font-weight: 600;
 
@@ -258,6 +262,7 @@
             }
 
             p {
+                font-size: 16px;
                 margin: 5px 0;
                 color: map-get($map: $theme-colors, $key: "description");
                 @each $key, $value in map-get($theme-webkits, description) {
@@ -278,13 +283,13 @@
                 font-weight: 600;
 
                 del {
+                    font-size: 14px;
                     font-style: italic;
                     font-weight: 400;
                 }
 
                 span {
                     color: #ff0000;
-                    font-size: 16px;
                 }
             }
 
@@ -294,7 +299,7 @@
             .ant-rate-star {
                 span {
                     svg {
-                        font-size: 16px !important;
+                        font-size: 14px !important;
                     }
                 }
             }
@@ -372,6 +377,7 @@
 
     .content__hot-product__title {
         h2 {
+            font-size: 18px;
             margin-bottom: 10px;
         }
 
@@ -458,12 +464,12 @@
 
         .lastest-product__item__info {
             .lastest-product__item__name {
+                font-size: 16px;
                 color: map-get($map: $theme-colors, $key: "black");
+                margin-bottom: 5px;
             }
 
             .ant-rate-star {
-                margin-bottom: 5px;
-
                 &:not(:last-child) {
                     margin-inline-end: 0 !important;
                 }
@@ -478,6 +484,8 @@
             }
 
             .lastest-product__item__price {
+                font-size: 12px;
+                font-weight: 600;
                 font-style: italic;
                 color: #ff0000;
             }
@@ -487,6 +495,8 @@
 
 .category__sidebar__product-tags {
     h2 {
+        font-size: 20px;
+        font-weight: 600;
         margin-bottom: 10px;
     }
 
